# john0isaac.github.io

./: .env.example  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  Makefile  README.md  _config.yml  blog.md  dev.py  index.md  main.py  mkdocs.yml  projects.md  pyproject.toml  requirements.txt  talks.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: jekyll.yml  publish.yml  sync-videos.yml  test.yml
_data/: talks.yml
_includes/: head.html
_posts/: 2025-07-05-welcome-to-jekyll.md
_sass/: minima.scss
_sass/minima/: _base.scss
assets/: blog-archive.js  blog.css  codeblocks.js  layout.css  post.css  projects-talks.css  prose.css  search.css  styles.css  theme.js  variables.css
assets/css/: blog.css  fonts.css  home.css  layout.css  post.css  prose.css  resume.css  search.css  styles.css  variables.css
assets/js/: blog-archive.js  nav-drawer.js  search.js
data/: projects.yml  videos.yml
docs/: index.md
docs/blog/posts/: 2025-07-06-welcome.md
hooks/: data_loader.py
scripts/: constants.py  gitinfo.py  minify.py  models.py  optimize.py  social.py  sync_videos.py
src/: index.md  projects.md  resume.md  robots.txt  talks.md
src/blog/: .authors.yml  index.md
src/blog/posts/: 2023-09-07-bring-your-own-data-azure-openai.md  2023-11-21-migrating-postgresql-web-app-gcp-to-azure.md  2024-03-13-rag-chat-app-cosmos-db-openai.md  2024-04-03-create-large-language-model-deployment.md  2024-04-03-introduction-large-language-models.md
src/blog/posts/2023/: 2023-06-09-healthcare-chatbot-azure-health-bot.md  2023-06-21-deploying-gpt2-azure-power-automate.md  2023-07-06-packaging-deploying-ml-models-azure.md  2023-07-21-automate-email-management-ai-builder-power-apps.md  2023-09-07-bring-your-own-data-azure-openai.md  2023-10-04-understanding-different-large-language-models.md  2023-10-14-intro-git-github-version-control.md  2023-11-21-migrating-postgresql-web-app-gcp-to-azure.md  2023-12-28-migrating-mysql-web-app-gcp-to-azure.md
src/blog/posts/2024/: 2024-03-13-rag-chat-app-cosmos-db-openai.md  2024-04-03-create-large-language-model-deployment.md  2024-04-03-introduction-large-language-models.md  2024-07-22-grounding-llms-with-rag.md
src/blog/posts/2025/: 2025-04-05-mac-brew-development-packages.md  2025-04-05-mac-finder-customizations.md  2025-04-06-zsh-config.md  Brewfile  myaliases.zsh
src/blog/posts/2026/: .zprofile  .zshrc  2026-04-05-mac-brew-development-packages.md  2026-04-05-mac-finder-customizations.md  2026-04-06-zsh-config.md  2026-04-27-ai-rag-documentdb-langchain-openai.md  Brewfile
src/images/logo/: site.webmanifest
src/overrides/: home.html  projects.html  talks.html
src/overrides/partials/: comments.html  search.html
templates/: 404.html  base.html  blog_index.html  blog_post.html  home.html  projects.html  resume.html  talks.html
templates/layouts/: resume.html
templates/partials/: author_list.html  blog_archive.html  comments.html  footer.html  navbar.html  page_header.html  search_modal.html  social_links.html
tests/: conftest.py
tests/e2e/: test_accessibility.py  test_interactions.py
tests/integration/: test_build_output.py
tests/unit/: test_archive_search.py  test_authors.py  test_dataclasses_context.py  test_gitinfo.py  test_load_page_and_env.py  test_markdown.py  test_minify.py  test_optimize.py  test_related.py  test_sitemap_rss_pagination.py  test_social.py  test_text_helpers.py
