[project]
name = "john0isaac-github-io"
description = "John Aziz - Senior Software Engineer. Personal website and blog."
version = "0.1.0"
authors = [{ name = "John Aziz", email = "johnaziz269@gmail.com" }]
maintainers = [{ name = "John Aziz", email = "johnaziz269@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "csscompressor>=0.9.5",
    "htmlmin2>=0.1.13",
    "Jinja2>=3.1.6",
    "jsmin>=3.0.1",
    "Markdown>=3.8.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://johnaziz.org"
Repository = "https://github.com/john0isaac/john0isaac.github.io"
Issues = "https://github.com/john0isaac/john0isaac.github.io/issues"

[dependency-groups]
dev = [
    "ruff",
    "tox",
    "tox-uv",
    "watchfiles",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "beautifulsoup4>=4.12",
]
e2e = [
    "pytest>=8.3",
    "pytest-playwright>=0.5",
    "axe-playwright-python>=0.1.7",
]
pre-commit = [
    "pre-commit",
    "pre-commit-uv",
]
gha-update = [
    "gha-update ; python_full_version >= '3.12'",
]
typing = [
    "mypy",
    "types-Markdown",
    "types-PyYAML",
]

[tool.uv]
default-groups = ["dev", "pre-commit", "typing", "test", "e2e"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --ignore=tests/e2e"
markers = [
    "unit: fast, isolated tests for individual functions",
    "integration: tests that build the full site and inspect output",
    "e2e: browser-driven tests that require Playwright and a running server",
    "a11y: accessibility tests using axe-core",
]

[tool.coverage.run]
source = ["main"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warning
]

[tool.mypy]
python_version = "3.12"
exclude = "tests/.*"
show_error_codes = true
pretty = true
strict = true

[tool.tox]
env_list = [
    "style",
    "typing",
    "test",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
skip_install = true

[tool.tox.env.docs]
description = "build the site"
dependency_groups = ["dev"]
commands = [["python", "main.py", "build"]]

[tool.tox.env.docs-auto]
description = "continuously rebuild and serve the site locally with live reload"
dependency_groups = ["dev"]
commands = [["python", "dev.py"]]

[tool.tox.env.style]
description = "run all pre-commit hooks on all files"
dependency_groups = ["pre-commit"]
commands = [["pre-commit", "run", "--all-files"]]

[tool.tox.env.typing]
description = "run static type checkers"
dependency_groups = ["typing"]
skip_install = true
commands = [
    ["mypy", "."],
]

[tool.tox.env.test]
description = "run unit and integration tests with coverage"
dependency_groups = ["test"]
skip_install = true
commands = [["pytest", {replace = "posargs", default = ["--cov", "--cov-report=term-missing"], extend = true}]]

[tool.tox.env.update-actions]
description = "update GitHub Actions pins"
labels = ["update"]
dependency_groups = ["gha-update"]
skip_install = true
commands = [["gha-update"]]

[tool.tox.env.update-pre-commit]
description = "update pre-commit pins"
labels = ["update"]
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "autoupdate", "--freeze", "-j4"]]

[tool.tox.env.update-requirements]
description = "update uv lock"
labels = ["update"]
dependency_groups = []
no_default_groups = true
skip_install = true
commands = [["uv", "lock", {replace = "posargs", default = ["-U"], extend = true}]]
